manifests/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: execution-mode
  labels:
    app.kubernetes.io/name: execution-mode
    app.kubernetes.io/part-of: presentation-layer
    app.kubernetes.io/component: ingress-route
    app.kubernetes.io/version: 1.0.0
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`app.getbud.co`)
      kind: Rule
      services:
        - name: execution-mode-stable
          port: 80
    - match: Host(`app.canary.getbud.co`)
      kind: Rule
      services:
        - name: execution-mode-canary
          port: 80
  tls:
    options:
      namespace: traefik-proxy
      name: tls-options
    secretName: ssl-certs-execution-mode
